--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "bootstrap": "^5.3.3",
+    "ngx-toastr": "^19.0.0",
     "primeflex": "^3.3.1",
     "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
